Fixed the one taxonomy per column output to not do stupid column aligning; updated styles for alphabetical sort

--- a/style-responsive.css
+++ b/style-responsive.css
@@ -5,7 +5,6 @@
 	
 	#header-menu li#menu-item-76 { margin-left: 297px; }
 	
-	.post-type-search-term>div>.row>div:first-child { margin-left: 30px; }
 	.post-type-search-form input { width: 235px; }
 }
 
@@ -40,7 +39,6 @@
 	#sidebar .post-type-search-form input { width: 690px; }
 	#sidebar .post-type-search-results { width: 579px; }
 	#sidebar .post-type-search-results ul li a { margin-left: 20px; }
-	#sidebar .post-type-search-term > div > .row > div { margin-left: 20px; }
 	
 	.page-content, #footer-widget-wrap { padding-left: 20px; }
 	#footer { margin-left: 0; }
@@ -48,7 +46,6 @@
 
 @media (max-width: 768px) {	
 	#sidebar .post-type-search-results ul li a { width: 84% !important; }
-	.post-type-search-term>div>.row>div:first-child { margin-left: 0; }
 	
 	.box { height: auto !important; margin-bottom: 20px; }
 	
