--- a/style.css
+++ b/style.css
@@ -203,6 +203,8 @@ p i { vertical-align: middle !important; padding-bottom: 2px; }
 }
 .post-type-search-form input { margin-bottom: 0; width: 185px; }
 
+.post-type-search-sorting { position: absolute; right: 12px; top: 12px; }
+
 .post-type-search-results {
 	position: absolute;
 	background: #fff;
@@ -230,7 +232,7 @@ p i { vertical-align: middle !important; padding-bottom: 2px; }
 .post-type-search-results ul li:hover a {  color: #fff; text-decoration: none; }
 .post-type-search-message { padding-top: 10px; margin-bottom: 0; }
 
-.post-type-search-term { 
+.post-type-search-term, .post-type-search-alpha { 
 	padding: 10px;
 	border-radius: 5px; 
 	-webkit-border-radius: 5px;
@@ -238,15 +240,21 @@ p i { vertical-align: middle !important; padding-bottom: 2px; }
 	-moz-box-shadow: 0 0 4px rgba(0, 0, 0, .1);
 	-webkit-box-shadow: 0 0 4px rgba(0, 0, 0, .1);
 	box-shadow: 0 0 4px rgba(0, 0, 0, .1); 
+	overflow: hidden;
 }
-.post-type-search-term>div { margin-bottom: 10px; }
-.post-type-search-term>div>.row>div { margin-left: 5px; }
-.post-type-search-term>div>.row>div:first-child { margin-left: 20px; }
-.post-type-search-term h3 { font-size: 11px !important; color: #999; text-transform: uppercase; line-height: 15px !important; margin-bottom: 5px; }
-.post-type-search-term ul { list-style-type: none; margin-left: 0; margin-bottom: 0; padding-right: 22px; }
-.page-content .post-type-search-term ul li { line-height: 15px !important; margin-bottom: 9px; }
-.post-type-search-term ul li a { font-size: 13px; color: #0086cb; text-decoration: none; }
-.post-type-search-term ul li a:hover { color: #0086cb; text-decoration: underline; }
+.post-type-search-term>div, .post-type-search-alpha>div { margin-left: 0; margin-right: 5px; }
+.post-type-search-term h3, .post-type-search-alpha h3 { 
+	font-size: 11px !important; 
+	color: #999; 
+	text-transform: uppercase; 
+	line-height: 15px !important; 
+	margin-bottom: 5px;
+}
+.post-type-search-alpha h3 { font-size: 18px !important; }
+.post-type-search-term ul, .post-type-search-alpha ul { list-style-type: none; margin-left: 0; margin-bottom: 20px; padding-right: 22px; }
+.post-type-search-term ul li, .post-type-search-alpha ul li { line-height: 15px !important; margin-bottom: 9px; }
+.post-type-search-term ul li a, .post-type-search-alpha ul li a { font-size: 13px; color: #0086cb; text-decoration: none; }
+.post-type-search-term ul li a:hover, .post-type-search-alpha ul li a:hover { color: #0086cb; text-decoration: underline; }
 
 
 
